tests/snapshot/error/parser/labeled_function.js
// Labeled function in non-Annex B mode
label: function test() {}